--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 num_cpus = "1.16.0"
 tokio = { version = "1", features = ["full"] }
+rustc-hash = "1.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
